styles:nav bar user photo height, width and border-radius 50%

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -1,1 +1,10 @@
-
+// header styles
+header {
+  .navbar {
+    img {
+      width: 3rem;
+      height: 3rem;
+      border-radius: 50%;
+    }
+  }
+}
