fix:navbar img selector fix rename

--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@
   background-color: #353535;
 }
 
-header .navbar s img {
+header .navbar img {
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
