--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -21,7 +21,7 @@ $red: #A44656;
 // header styles
 header {
   .navbar {
-    s img {
+    img {
       width: 3rem;
       height: 3rem;
       border-radius: 50%;
