--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -29,6 +29,10 @@ $red: #a44656;
 // header styles
 header {
   .navbar {
+    .navbar-toggler {
+      border: 0.5px solid rgba(173, 119, 57, 0.356);
+    }
+
     img {
       width: 3rem;
       height: 3rem;
