--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -50,6 +50,10 @@ main {
     background-color: $red;
   }
 
+  .carousel {
+    background-color: antiquewhite;
+  }
+
   .carousel-img {
     height: 20rem;
     width: 20rem;
