--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -48,6 +48,7 @@ main {
     background-position: 5rem;
     background-size: 70%;
     background-color: $red;
+    border-radius: 0;
   }
 
   .carousel {
