--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -59,4 +59,14 @@ main {
     height: 20rem;
     width: 20rem;
   }
+
+  .product-card {
+    display: grid;
+    justify-content: center;
+    padding: 1rem;
+
+    img {
+      width: 100%;
+    }
+  }
 }
