search-page:filter search options

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -86,3 +86,9 @@ footer {
     width: 4rem;
   }
 }
+
+// search page styles
+.search-main {
+  display: grid;
+  grid-template-columns: 3fr 7fr;
+}
