style:image path fix for the carousel slide 1

--- a/css/main.css
+++ b/css/main.css
@@ -55,11 +55,11 @@ main .jumbotron .jumbotron-element {
   height: 3rem;
 }
 
-main .carousel {
+main .carousel-main.carousel {
   background-color: antiquewhite;
 }
 
-main .carousel-img {
+main .carousel-main.carousel .carousel-img {
   height: 20rem;
   width: 20rem;
 }
