--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,26 @@ li {
   background-color: grey;
 }
 
+.button, .button-w-100 {
+  background-color: #a44656;
+  color: white;
+  padding: 0.5rem 3rem;
+}
+
+.button-w-100 {
+  width: 100%;
+  padding: 0.5rem;
+  margin: 0 1rem;
+}
+
+.min-w-100 {
+  min-width: 100%;
+}
+
+.br-0 {
+  border-radius: 0;
+}
+
 header .navbar .navbar-toggler {
   border: 0.5px solid rgba(173, 119, 57, 0.356);
 }
@@ -59,9 +79,18 @@ main .carousel-main.carousel {
   background-color: antiquewhite;
 }
 
-main .carousel-main.carousel .carousel-img {
-  height: 20rem;
-  width: 20rem;
+main .carousel-main.carousel .carousel-item .carousel-img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+main .carousel-main .carousel-indicators {
+  position: relative;
+  top: 1rem;
+}
+
+main .carousel-main .carousel-indicators li:active {
+  color: red;
 }
 
 main .product-card {
