--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -35,6 +35,31 @@ li {
   background-color: grey;
 }
 
+.button {
+  background-color: $red;
+  color: white;
+  padding: 0.5rem 3rem;
+}
+
+.button-w-100 {
+  @extend .button;
+
+  width: 100%;
+  padding: 0.5rem;
+  margin: 0 1rem;
+}
+
+// spacing utilities
+.min-w-100 {
+  min-width: 100%;
+}
+
+// border-radius
+.br-0 {
+  border-radius: 0;
+}
+
+
 // header styles
 header {
   .navbar {
@@ -71,9 +96,21 @@ main {
     &.carousel {
       background-color: antiquewhite;
 
-      .carousel-img {
-        height: 20rem;
-        width: 20rem;
+      // caoursal slides
+      .carousel-item {
+        .carousel-img {
+          max-width: 100%;
+          max-height: 100%;
+        }
+      }
+    }
+
+    .carousel-indicators {
+      position: relative;
+      top: 1rem;
+
+      li:active {
+        color: red;
       }
     }
   }
