style:carousel sides piano violin and drum

--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,8 @@ main .carousel-main.carousel {
 
 main .carousel-main.carousel .carousel-item .carousel-img {
   max-width: 100%;
+  min-width: 100%;
+  min-height: 20rem;
   max-height: 100%;
 }
 
