fix:carousel parent row creating width issues fixed

--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,7 @@ main .carousel-main.carousel .carousel-item .carousel-img {
   max-width: 100%;
   min-width: 100%;
   min-height: 20rem;
+  max-height: 25rem;
 }
 
 main .carousel-main .carousel-indicators {
