--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -102,6 +102,7 @@ main {
           max-width: 100%;
           min-width: 100%;
           min-height: 20rem;
+          max-height: 25rem;
         }
       }
     }
