carousel styling justify center

--- a/css/main.css
+++ b/css/main.css
@@ -90,6 +90,19 @@ main .carousel-main.carousel .carousel-item .carousel-img {
   max-height: 25rem;
 }
 
+main .carousel-main.carousel .carousel-item .carousel-texts {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 main .carousel-main .carousel-indicators {
   position: relative;
   top: 1rem;
