--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -127,6 +127,10 @@ main {
     }
   }
 
+  .product-section {
+    padding: 3rem 10rem;
+  }
+
   .product-card {
     display: grid;
     justify-content: center;
