--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -110,14 +110,60 @@ main {
         .carousel-img {
           max-width: 100%;
           min-width: 100%;
-          min-height: 20rem;
-          max-height: 25rem;
+          min-height: 15rem;
+          max-height: 20rem;
         }
 
         .carousel-texts {
+          margin-top: -12rem;
           flex-direction: column;
           justify-content: center;
           align-items: center;
+          text-shadow: 2px 7px 5px rgba(0, 0, 0, 0.3), 0 -4px 10px rgba(255, 255, 255, 0.3);
+
+          h2 {
+            color: #ff002b;
+          }
+
+          .quote {
+            margin-top: 2rem;
+          }
+
+
+          .quote,
+          p {
+            color: white;
+          }
+
+          .check {
+            margin-top: 2rem;
+            color: black;
+          }
+
+
+          @media (min-width:540px) {
+            margin-top: -9rem;
+
+            span {
+              color: white;
+            }
+          }
+
+          @media (min-width: 768px) {
+            margin-top: 0;
+
+            .quote,
+            p,
+            .check,
+            span {
+              color: black;
+              margin-top: 0;
+            }
+
+            h2 {
+              color: #A44656;
+            }
+          }
         }
       }
     }
