--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,22 @@ header .navbar .navbar-toggler {
   border: 0.5px solid rgba(173, 119, 57, 0.356);
 }
 
+@media (max-width: 768px) {
+  header .navbar .navbar-collapse {
+    padding: 1rem 2rem;
+  }
+  header .navbar .navbar-collapse button {
+    width: 100%;
+  }
+  header .navbar .navbar-collapse .user {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  header .navbar .navbar-collapse .user picture {
+    height: 3rem;
+  }
+}
+
 header .navbar img {
   width: 3rem;
   height: 3rem;
