--- a/css/main.css
+++ b/css/main.css
@@ -99,6 +99,13 @@ main .jumbotron .jumbotron-element {
   height: 3rem;
 }
 
+main .jumbotron select {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  border: 1px solid silver;
+}
+
 main .carousel-main.carousel {
   background-color: #e3e3e3;
 }
