--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -116,6 +116,13 @@ main {
       padding: 0.5rem 0;
       height: 3rem;
     }
+
+    select {
+      width: 100%;
+      height: 100%;
+      background-color: white;
+      border: 1px solid silver;
+    }
   }
 
   // carousel styling
