--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 li {
   list-style: none;
 }
@@ -54,8 +59,9 @@ li {
   padding: 0;
 }
 
-.bg-dark-blue {
-  background-color: antiquewhite;
+.bg-body {
+  background-image: -webkit-gradient(linear, left top, right top, from(#868f96), to(#596164));
+  background-image: linear-gradient(to right, #868f96 0%, #596164 100%);
 }
 
 header .navbar .navbar-toggler {
@@ -107,72 +113,21 @@ main .jumbotron select {
 }
 
 main .carousel-main.carousel {
-  background-color: #e3e3e3;
+  background-color: #f6f6f6;
+}
+
+main .carousel-main.carousel .carousel-item {
+  background-color: #485461;
+  background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
 }
 
 main .carousel-main.carousel .carousel-item .carousel-img {
-  max-width: 100%;
   min-width: 100%;
-  min-height: 15rem;
-  max-height: 20rem;
+  height: 15rem;
 }
 
-main .carousel-main.carousel .carousel-item .carousel-texts {
-  margin-top: -12rem;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-shadow: 2px 7px 5px rgba(0, 0, 0, 0.3), 0 -4px 10px rgba(255, 255, 255, 0.3);
-}
-
-main .carousel-main.carousel .carousel-item .carousel-texts h2 {
-  color: #ff002b;
-}
-
-main .carousel-main.carousel .carousel-item .carousel-texts .quote {
-  margin-top: 2rem;
-}
-
-main .carousel-main.carousel .carousel-item .carousel-texts .quote,
 main .carousel-main.carousel .carousel-item .carousel-texts p {
   color: white;
-}
-
-main .carousel-main.carousel .carousel-item .carousel-texts .check {
-  margin-top: 2rem;
-  color: black;
-}
-
-@media (min-width: 540px) {
-  main .carousel-main.carousel .carousel-item .carousel-texts {
-    margin-top: -9rem;
-  }
-  main .carousel-main.carousel .carousel-item .carousel-texts span {
-    color: white;
-  }
-}
-
-@media (min-width: 768px) {
-  main .carousel-main.carousel .carousel-item .carousel-texts {
-    margin-top: 0;
-  }
-  main .carousel-main.carousel .carousel-item .carousel-texts .quote,
-  main .carousel-main.carousel .carousel-item .carousel-texts p,
-  main .carousel-main.carousel .carousel-item .carousel-texts .check,
-  main .carousel-main.carousel .carousel-item .carousel-texts span {
-    color: black;
-    margin-top: 0;
-  }
-  main .carousel-main.carousel .carousel-item .carousel-texts h2 {
-    color: #A44656;
-  }
 }
 
 main .carousel-main .carousel-indicators {
