--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -183,13 +183,18 @@ main {
     }
   }
 
-  .product-card {
-    display: grid;
-    justify-content: center;
-    padding: 1rem;
 
-    img {
-      width: 100%;
+  // product grid and card styling
+  .product-section {
+    .product-card {
+      .product-img-container {
+        .product-img {
+          width: 15rem;
+          height: 15rem;
+          padding: 2rem;
+          margin: auto;
+        }
+      }
     }
   }
 
