--- a/css/main.css
+++ b/css/main.css
@@ -160,11 +160,34 @@ main .carousel-main .carousel-indicators li:active {
   color: red;
 }
 
+main .product-section .product-card {
+  padding: 1rem;
+}
+
 main .product-section .product-card .product-img-container .product-img {
-  width: 15rem;
   height: 15rem;
-  padding: 2rem;
-  margin: auto;
+  width: 100%;
+}
+
+main .product-section .product-card .product-card-bottom {
+  padding: 1rem;
+}
+
+main .product-section .product-card .product-card-bottom .add-svg-container {
+  display: inline;
+}
+
+main .product-section .product-card .product-card-bottom .add-svg-container .add-svg .add-svg-path {
+  fill: #a44656;
+}
+
+main .product-section .product-card .product-card-bottom .add-svg-container:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+main .product-section .product-card .product-card-bottom .add-svg-container:hover .add-svg-path {
+  fill: black;
 }
 
 main .pagination .page-link {
