--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -59,6 +59,22 @@ li {
   min-width: 100%;
 }
 
+.top {
+  top: 0;
+}
+
+.left {
+  left: 0;
+}
+
+.right {
+  right: 0;
+}
+
+.bottom {
+  bottom: 0;
+}
+
 // border-radius
 .br-0 {
   border-radius: 0;
