--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -217,7 +217,7 @@ main {
       }
 
       .product-card-bottom {
-        padding: 1rem;
+        padding: 0.5rem 0;
 
         .add-svg-container {
           display: inline;
