--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -253,9 +253,11 @@ main {
 
       @media (min-width: 768px) {
         grid-template-columns: repeat(3, 1fr);
+        grid-gap: 2rem;
       }
 
       @media (min-width: 992px) {
+        grid-gap: 3rem;
         grid-template-columns: repeat(4, 1fr);
       }
     }
