--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -8,6 +8,7 @@ $red: #a44656;
   padding: 0;
 }
 
+
 li {
   list-style: none;
 }
@@ -332,7 +333,8 @@ footer {
   grid-template-columns: 1fr;
 
   .query-item {
-    padding: 1rem;
+    padding: 0 1rem;
+    display: grid;
 
     .query-img-container {
       .query-img {
@@ -342,32 +344,37 @@ footer {
 
     .query-text-container {
       display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
     }
   }
 
   @media (min-width: 768px) {
     grid-template-columns: 3fr 7fr;
+    grid-template-rows: minmax(min-content, max-content);
 
     .query-item {
-      display: flex;
+      grid-template-columns: 1fr 1fr;
 
       .query-img-container {
-        flex: 0 0 40%;
 
-        .query-img {
-          width: 100%;
+        .query-img-container {
+          display: flex;
+
+          .query-img {
+            max-height: 100%;
+          }
         }
       }
 
       .query-text-container {
-        flex: 0 0 60%;
+        padding: 1rem;
       }
     }
   }
 
   img {
     width: 10rem;
-    height: 100%;
-    max-height: 20rem;
+    max-height: 100%;
   }
 }
